services/job-archive-control/main.tf
# --------------------------------------------------------------------------------
# JOB ARCHIVE CONTROL SERVICE PACKAGE
# --------------------------------------------------------------------------------

# --------------------------------------------------------------------------------
# CONFIGURE OUR AWS CONNECTION
# --------------------------------------------------------------------------------
provider "aws" {
  region = "${var.aws_region}"

  # Only these AWS Account IDs may be operated on by this template
  allowed_account_ids = ["${var.aws_account_id}"]
}

# --------------------------------------------------------------------------------
# CONFIGURE REMOTE STATE STORAGE
# --------------------------------------------------------------------------------
terraform {
  # The configuration for this backend will be filled in by Terragrunt
  backend "s3" {}

  # Only allow this Terraform version. Note that if you upgrade to a newer version,
  # Terraform won't allow you to use an older version, so when you upgrade, you 
  # should upgrade everyone on your team and your CI servers all at once.
  required_version = "~> 0.11.10"
}

# --------------------------------------------------------------------------------
# ADD DATALOOKUP FOR VPC
# --------------------------------------------------------------------------------
data "terraform_remote_state" "vpc" {
  backend = "s3"

  config {
    region = "${var.terraform_state_aws_region}"
    bucket = "${var.terraform_state_s3_bucket}"
    key    = "${var.aws_region}/${var.vpc_name}/vpc/terraform.tfstate"
  }
}

# --------------------------------------------------------------------------------
# LOCAL VARIABLES
# --------------------------------------------------------------------------------
locals {
  legacy_environment = "${var.service_environment == "prod" ? "prod" : "int"}"
  component_name = "${var.service_name}-control"
}

# --------------------------------------------------------------------------------
# KMS MASTER KEY FOR ENCRYPTING SSM PARAMETERS
# --------------------------------------------------------------------------------
module "kms_master_key" {
  source = "git::git@github.com:gruntwork-io/module-security.git//modules/kms-master-key?ref=v0.15.4"

  aws_account_id = "${var.aws_account_id}"
  name = "${local.component_name}-${var.service_environment}-kms-key"
  cmk_administrator_iam_arns = "${var.cmk_administrator_iam_arns}"
  cmk_user_iam_arns          = "${var.cmk_user_iam_arns}"
  allow_manage_key_permissions_with_iam = "false"
}

# --------------------------------------------------------------------------------
# SNS TOPIC FOR ALL COMPLETED TASKS
# --------------------------------------------------------------------------------
module "sns_completed_tasks" {
  source = "git::git@github.com:gruntwork-io/package-messaging.git//modules/sns?ref=v0.1.3"

  name = "${local.component_name}-${var.service_environment}-completed-tasks-topic"
  display_name = "ja-${var.service_environment == "prod" ? "prd" : "stg"}-ctl"
  allow_publish_accounts = "${var.allow_publish_accounts}"
  allow_subscribe_accounts = "${var.allow_subscribe_accounts}"
  allow_subscribe_protocols = "${var.allow_subscribe_protocols}"
}

resource "aws_ssm_parameter" "ssm_sns_completed_tasks_name" {
  name  = "/${local.component_name}/${var.service_environment}/sns/completed-tasks/name"
  type  = "SecureString"
  value = "${module.sns_completed_tasks.topic_name}"
  key_id = "${module.kms_master_key.key_id}"
}

resource "aws_ssm_parameter" "ssm_sns_completed_tasks_display_name" {
  name  = "/${local.component_name}/${var.service_environment}/sns/completed-tasks/display-name"
  type  = "SecureString"
  value = "${module.sns_completed_tasks.topic_display_name}"
  key_id = "${module.kms_master_key.key_id}"
}

resource "aws_ssm_parameter" "ssm_sns_completed_tasks_arn" {
  name  = "/${local.component_name}/${var.service_environment}/sns/completed-tasks/arn"
  type  = "SecureString"
  value = "${module.sns_completed_tasks.topic_arn}"
  key_id = "${module.kms_master_key.key_id}"
}

# --------------------------------------------------------------------------------
# SECURITY
# --------------------------------------------------------------------------------

# --------------------------------------------------------------------------------
# SECURITY GROUP
# --------------------------------------------------------------------------------
resource "aws_security_group" "job_archive_control" {
  name        = "${local.component_name}-${var.service_environment}-sg"
  description = "Job Archive Control ${var.service_environment} lambda security group"
  vpc_id      = "${data.terraform_remote_state.vpc.vpc_id}"
  tags        = "${merge(map("Name", format("%s-%s",local.component_name, var.service_environment)), var.custom_tags)}"
}

# --------------------------------------------------------------------------------
# SECURITY GROUP RULES
# --------------------------------------------------------------------------------
resource "aws_security_group_rule" "allow_5432_egress_connections" {
  type              = "egress"
  from_port         = 5432
  to_port           = 5432
  protocol          = "tcp"
  cidr_blocks       = ["${data.terraform_remote_state.vpc.private_persistence_subnet_cidr_blocks}"]
  security_group_id = "${aws_security_group.job_archive_control.id}"
  description       = "Allow all tcp 5432 egress to Postgres RDS"
}

resource "aws_security_group_rule" "allow_443_outbound" {
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]                             #Intended to be HTTPS outbound connections to SQS
  security_group_id = "${aws_security_group.job_archive_control.id}"
  description       = "Allow all tcp 443 egress"
}
